--- a/polybar/config
+++ b/polybar/config
@@ -1,13 +1,13 @@
-;                         88             88                                 
-;                         88             88                                 
-;                         88             88                                 
-; 8b,dPPYba,   ,adPPYba,  88 8b       d8 88,dPPYba,  ,adPPYYba, 8b,dPPYba,  
-; 88P'    "8a a8"     "8a 88 `8b     d8' 88P'    "8a ""     `Y8 88P'   "Y8  
-; 88       d8 8b       d8 88  `8b   d8'  88       d8 ,adPPPPP88 88          
-; 88b,   ,a8" "8a,   ,a8" 88   `8b,d8'   88b,   ,a8" 88,    ,88 88          
-; 88`YbbdP"'   `"YbbdP"'  88     Y88'    8Y"Ybbd8"'  `"8bbdP"Y8 88          
-; 88                             d8'                                        
-; 88                            d8'                                         
+;                         88             88
+;                         88             88
+;                         88             88
+; 8b,dPPYba,   ,adPPYba,  88 8b       d8 88,dPPYba,  ,adPPYYba, 8b,dPPYba,
+; 88P'    "8a a8"     "8a 88 `8b     d8' 88P'    "8a ""     `Y8 88P'   "Y8
+; 88       d8 8b       d8 88  `8b   d8'  88       d8 ,adPPPPP88 88
+; 88b,   ,a8" "8a,   ,a8" 88   `8b,d8'   88b,   ,a8" 88,    ,88 88
+; 88`YbbdP"'   `"YbbdP"'  88     Y88'    8Y"Ybbd8"'  `"8bbdP"Y8 88
+; 88                             d8'
+; 88                            d8'
 
 ;                   Configuration by Theory_of_Everything
 
@@ -26,20 +26,16 @@ white = #d0d0d0
 
 ;============================================================================
 [bar/top]
-background = #151515 
+background = #151515
 modules-left = bspwm
-modules-center = cpu 
-modules-right = date battery
+modules-center = cpu
+modules-right = network date battery
 module-margin = 1
 padding = 2
 seprator = /
-font-0 = Inconsolata 
+font-0 = Inconsolata
 font-1 = FontAwesome:style=Regular
-font-2 = NerdFonts
-font-3 = Inconsolata Nerd
-
-tray-position = center
-tray-maxsize = 5
+font-2 = Inconsolata Nerd Font Mono:style=Bold
 
 ;============================================================================
 ;Date Module
@@ -61,7 +57,7 @@ format = <label>
 [module/cpu]
 type = internal/cpu
 interval = 0.5
-ramp-coreload-font = 0 
+ramp-coreload-font = 0
 format = <label> <ramp-coreload>
 
 ; Available tokens:
@@ -71,29 +67,36 @@ format = <label> <ramp-coreload>
 ;   %percentage-core[1-9]% - load percentage for specific core
 
 label = CPU %percentage%%
-ramp-coreload-spacing = 0.75 
+ramp-coreload-spacing = 0.75
 ramp-coreload-0 = ▁
 ramp-coreload-1 = ▂
 ramp-coreload-2 = ▃
+ramp-coreload-0-foreground = ${colors.green}
+ramp-coreload-1-foreground = ${colors.green}
+ramp-coreload-2-foreground = ${colors.green}
 
 ramp-coreload-3 = ▄
 ramp-coreload-4 = ▅
 ramp-coreload-5 = ▆
+ramp-coreload-3-foreground = ${colors.yellow}
+ramp-coreload-4-foreground = ${colors.yellow}
+ramp-coreload-5-foreground = ${colors.yellow}
 
 ramp-coreload-6 = ▇
 ramp-coreload-7 = █
+ramp-coreload-6-foreground = ${colors.red}
+ramp-coreload-7-foreground = ${colors.red}
 ;============================================================================
 [module/battery]
-font = FontAwesome
 type = internal/battery
 battery = BAT0
 adapter = AC0
 poll-interval = 1
-full-at = 98
+full-at = 99
 
 label-charging = %percentage%%
 label-discharging = %percentage%%
-label-full = "full"
+label-full = " full"
 
 format-spacing = 1
 format-charging = <animation-charging> <label-charging>
@@ -102,21 +105,44 @@ format-discharging = <animation-discharging> <label-discharging>
 ;format-animation-charging-foreground = ${colors.green}   #  Currently a work in progress
 ;format-animation-discharging-foreground = ${colors.red}  #
 
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-framrate = 750
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
+animation-charging-5 = 
+animation-charging-framerate = 750
 
-animation-discharging-0 = 
-animation-discharging-1 = 
+animation-discharging-0 = 
+animation-discharging-1 = 
+animation-discharging-2 = 
+animation-discharging-3 = 
+animation-discharging-4 = 
+animation-discharging-5 = 
 animation-discharging-framerate = 750
 
-animation-charging-font = 1
-animation-discharging-font = 1
+animation-charging-font = 3
+animation-discharging-font = 3
 
+;============================================================================
+[module/network]
+type = internal/network
+interface = wlp2s0
+interval = 3.0
+udspeed-minwidth = 5
+accumulate-stats = true
+unkown-as-up = false
+
+format-connected = <label-connected>
+format-disconnected = <label-disconnected>
+format-packetloss = ! <label-connected>
+
+label-connected = 直 %essid%
+label-disconnected = "睊 Network Unavalible"
 ;============================================================================
 [module/bspwm]
 type = internal/bspwm
-pin-workpace = true
+pin-workspaces = false
 inline-mode = false
 enable-click = false
 enable-scroll = false
@@ -138,7 +164,7 @@ format-spacing = 1
 format-margin = 1
 
 menu-0-0 = Off
-menu-0-0-exec = sudo /sbin/poweroff 
+menu-0-0-exec = sudo /sbin/poweroff
 menu-0-1 = Reboot
 menu-0-1-exec = sudo /sbin/reboot
 ;============================================================================
