--- a/polybar/config
+++ b/polybar/config
@@ -17,160 +17,56 @@ bg1 = #262626
 fg = #d0d0d0
 black = #151515
 red = #f56991
-green = #aaf2aa
+green = #68c768
 blue = #5ac3ef
 yellow = #a0ee71
 magenta = #e29ad3
 cyan = #45d7be
 white = #d0d0d0
+fg-main = #aaf2aa
+fg-sub = #f56991
+
+
+
+[settings]
+format-padding = 1
+format-background = ${colors.bg1}
+format-overline = ${colors.bg1}
+format-alignment = center
+
+[global/wm]
+margin-bottom = 0
+margin-top = 0
+
+[section/base]
+include-file = $HOME/.config/polybar/modules.ini
+include-file = $HOME/.config/polybar/glyphs.ini
 
 ;============================================================================
 [bar/top]
 background = #151515
-modules-left = bspwm
+height = 22
+modules-left = launcher bspwm xwin glyRbg glyRfg
+modules-center = glyL spacer cpu spacer glyR
+modules-right = glyLfg glyLbg network audio date battery pwrctl
+module-margin = 0
+vorder-size = 0
+font-0 = "agave Nerd Font Mono:style=r:pixelsize=12;0"
+font-1 = "agave Nerd Font Mono:style=r:pixelsize=20;1"
+font-2 = "agave Nerd Font Mono:style=r:pixelsize=15;1"
+
+;============================================================================
+
+[bar/symtray]
+background = #aaf2aa
+bottom = true
+height = 10
+width = 60
+offset-x = 100%:-30
+
+format-background = ${colors.bg0}
+
 modules-center = cpu
-modules-right = network date battery
-module-margin = 1
-padding = 2
-seprator = /
-font-0 = "Inconsolata:size=11;0"
-font-1 = "FontAwesome:style=Regular:size=11;0"
-font-2 = "Inconsolata Nerd Font Mono:style=Bold:size=11;0"
-
-;============================================================================
-;Date Module
-[module/date]
-type = internal/date
-interval = 1.0
-date = %m/%d/%Y
-time = %I:%M
-label = %date% %time%
-format = <label>
-
-;============================================================================
-[module/memory]
-type = internal/memory
-interval = 3
-label = RAM %mb_used%/%gb_free%
-format = <label>
-;============================================================================
-[module/cpu]
-type = internal/cpu
-interval = 0.5
-ramp-coreload-font = 0
-format = <label> <ramp-coreload>
-
-; Available tokens:
-;   %percentage% (default) - total cpu load averaged over all cores
-;   %percentage-sum% - Cumulative load on all cores
-;   %percentage-cores% - load percentage for each core
-;   %percentage-core[1-9]% - load percentage for specific core
-
-label = CPU %percentage%%
-ramp-coreload-spacing = 0.75
-ramp-coreload-0 = ▁
-ramp-coreload-1 = ▂
-ramp-coreload-2 = ▃
-ramp-coreload-0-foreground = ${colors.green}
-ramp-coreload-1-foreground = ${colors.green}
-ramp-coreload-2-foreground = ${colors.green}
-
-ramp-coreload-3 = ▄
-ramp-coreload-4 = ▅
-ramp-coreload-5 = ▆
-ramp-coreload-3-foreground = ${colors.yellow}
-ramp-coreload-4-foreground = ${colors.yellow}
-ramp-coreload-5-foreground = ${colors.yellow}
-
-ramp-coreload-6 = ▇
-ramp-coreload-7 = █
-ramp-coreload-6-foreground = ${colors.red}
-ramp-coreload-7-foreground = ${colors.red}
-;============================================================================
-[module/battery]
-type = internal/battery
-battery = BAT0
-adapter = AC0
-poll-interval = 1
-full-at = 100
-
-label-charging = %percentage%%
-label-discharging = %percentage%%
-label-full = " full"
-
-format-spacing = 1
-format-charging = <animation-charging> <label-charging>
-format-discharging = <animation-discharging> <label-discharging>
-
-;format-animation-charging-foreground = ${colors.green}   #  Currently a work in progress
-;format-animation-discharging-foreground = ${colors.red}  #
-
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-3 = 
-animation-charging-4 = 
-animation-charging-5 = 
-animation-charging-framerate = 750
-
-animation-discharging-0 = 
-animation-discharging-1 = 
-animation-discharging-2 = 
-animation-discharging-3 = 
-animation-discharging-4 = 
-animation-discharging-5 = 
-animation-discharging-framerate = 750
-
-animation-charging-font = 3
-animation-discharging-font = 3
-
-;============================================================================
-[module/network]
-type = internal/network
-interface = wlp2s0
-interval = 3.0
-udspeed-minwidth = 5
-accumulate-stats = true
-unkown-as-up = false
-
-format-connected = <label-connected>
-format-disconnected = <label-disconnected>
-format-packetloss = ! <label-connected>
-
-label-connected = 直 %essid%
-label-disconnected = "睊 Network Unavalible"
-;============================================================================
-[module/bspwm]
-type = internal/bspwm
-pin-workspaces = false
-inline-mode = false
-enable-click = false
-enable-scroll = false
-reverse-scroll = false
-fuzzy-match = true
-
-format-spacing = 0
-format-padding = 1
-label-focused-foreground = #aaf2aa
-format = <label-state>
-
-# label-focused = " %name% "
-# label-occupied-padding = 1
-# label-empty-padding = 1
-# label-focused-background = #2d2d2d
-# label-focused-padding = 1
-;============================================================================
-[module/pwrctl]
-type = custom/menu
-expand-right = true
-
-label-open = Pwr
-label-close = x
-format-spacing = 1
-format-margin = 1
-
-menu-0-0 = Off
-menu-0-0-exec = sudo /sbin/poweroff
-menu-0-1 = Reboot
-menu-0-1-exec = sudo /sbin/reboot
-;============================================================================
+font-0 = "agave Nerd Font Mono:stylr:pixelsize=12;0"
+tray-position = right
+tray-background = ${colors.bg0}
